<resources>
    <string name="app_name">Prayer</string>
    <string name="app_MorningPrayer">Morning Prayer</string>
    <string name="btn_Language">Cymraeg</string>
    <string name="Error">Error</string>
    <string name="FileNotFound">File Not Found</string>
    <string name="OTReading">Old Testament Reading</string>
    <string name="NewTestamentReading">New Testament Reading</string>
    <string name="GospelReading">Gospel Reading</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Unofficial Church In Wales App</string>
    <string name="nav_header_subtitle" translatable="false">rev.bettinson@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="app_EveningPrayer">Evening Prayer</string>
    <string name="app_Lectionary">Lectionary</string>
    <string name="app_Oremus">English Bible Readings (Oremus)</string>
    <string name="app_loading">loading</string>
    <string name="Psalm" translatable="false">Psalm</string>
    <string name="app_JSWORD">Welsh Bible Readings (JSWORD)</string>
    <string name="app_WelshBibleJswordName" translatable="false">WelBeiblNet</string>
    <string name="App_Key_SharedPref" translatable="false">ChurchInWalesPrayer</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_Display">Display</string>
    <string name="pref_Display_Font_Default">sans-serif</string>
    <string name="pref_Display_Font">Default Font</string>
    <string name="pref_Display_FontSize">Font Size</string>
    <string name="pref_Display_FontSize_Default" translatable="false">14</string>
    <string name="app_version">Release 1.2.2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_Welcome">Welcome</string>
    <string name="app_EnglishBibleJswordName">OEBcth</string>
    <string name="app_EnglishBibleJswordZipName">OEBcth.zip</string>
    <string name="error_NoInternet">Error, No Internet Access Found</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_full_name">The (Unofficial) Church In Wales Prayer App</string>
</resources>