<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/house"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/fragment_Prayer"
            android:icon="@drawable/morning"
            android:title="@string/app_MorningPrayer" />
        <item
            android:id="@+id/id_EveningPrayer"
            android:icon="@drawable/night"
            android:title="@string/app_EveningPrayer" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Lectionary"
            android:icon="@drawable/bible"
            android:title="@string/app_Lectionary" />

        <item
            android:id="@+id/fragment_oremus"
            android:icon="@drawable/bible"
            android:title="@string/app_Oremus" />
        <item
            android:id="@+id/fragment_JSWORD"
            android:icon="@drawable/bible"
            android:title="@string/app_JSWORD" />
    </group>
</menu>